--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^1.35.7",
+		"open-color": "^1.9.1",
 		"swiper": "^8.4.4"
 	}
 }
