--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^1.35.7",
 		"open-color": "^1.9.1",
+		"remixicon": "^2.5.0",
 		"swiper": "^8.4.4"
 	}
 }
